RAIN-4791: Alignment in create challan fixed (#1140)

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/index.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/index.scss
@@ -446,6 +446,12 @@ input[type="number"] {
   margin-bottom: revert;
 }
 
+.card-label-APK {
+  @apply w-1/3;
+  margin-bottom: revert;
+  width:100%;
+}
+
 .underline {
   border-color: #e7e6e6;
   @apply mb-sm;
